Fixes forums z-index appearing under logo Fixes view count cache

--- a/app/assets/stylesheets/pages/_forums.scss
+++ b/app/assets/stylesheets/pages/_forums.scss
@@ -3,6 +3,7 @@
 */
 
 #forums {
+  z-index: 100;
   position: relative;
 
   .topic-controls {
